--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "anyio>=3.0.0",
     "rich>=13.0.0",
-    "python-jose[cryptography]>=3.3.0",
+    "authlib>=1.3.0",
     "mcp>=1.0.0",
 ]
 
