Update Service URLs in Documentation for Consistency Across MCP Components
This commit updates the service URLs in the CLAUDE.md files across multiple components to ensure consistency in domain naming conventions. Key changes include:

- Replaced instances of `mcp-fetchs.yourdomain.com`, `mcp-filesystem.${BASE_DOMAIN}`, `mcp-memory.yourdomain.com`, `mcp-sequentialthinking.${BASE_DOMAIN}`, `mcp-time.yourdomain.com`, and `mcp-tmux.${BASE_DOMAIN}` with their simplified counterparts, such as `fetchs.yourdomain.com`, `filesystem.${BASE_DOMAIN}`, `memory.yourdomain.com`, `sequentialthinking.${BASE_DOMAIN}`, `time.yourdomain.com`, and `tmux.${BASE_DOMAIN}` respectively.
- Updated example commands in the `.env.example` file to reflect the new MCP server URL format.

These changes aim to enhance clarity and maintain uniformity in the documentation, facilitating easier understanding and usage of the services.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # MCP HTTP-to-stdio Proxy Configuration
 
 # MCP Server URL (required - this is all you need!)
-MCP_SERVER_URL=https://mcp-fetch.example.com/mcp
+MCP_SERVER_URL=https://everything.example.com/mcp
 
 # Everything else is discovered automatically:
 # - OAuth endpoints are discovered via RFC 8414 metadata
