--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "Apache-2.0"}
 authors = [
-    {name = "MCP OAuth Gateway Team", email = "team@example.com"},
+    {name = "Andreas Trawoeger"},
 ]
 keywords = ["mcp", "proxy", "oauth", "stdio", "streamable-http", "client"]
 classifiers = [
@@ -36,9 +36,10 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/yourusername/mcp-streamablehttp-client"
-"Bug Reports" = "https://github.com/yourusername/mcp-streamablehttp-client/issues"
-"Source" = "https://github.com/yourusername/mcp-streamablehttp-client"
+Homepage = "https://github.com/atrawog/mcp-oauth-gateway/tree/main/mcp-streamablehttp-client"
+Repository = "https://github.com/atrawog/mcp-oauth-gateway/tree/main/mcp-streamablehttp-client"
+Issues = "https://github.com/atrawog/mcp-oauth-gateway/issues"
+Documentation = "https://atrawog.github.io/mcp-oauth-gateway"
 
 [project.scripts]
 mcp-streamablehttp-client = "mcp_streamablehttp_client.cli:main"
